--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,24 @@
 	<groupId>org.fogbeam.example.opennlp</groupId>
 	<artifactId>nlp-demo1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
+<properties>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+  </properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.opennlp</groupId>
 			<artifactId>opennlp-tools</artifactId>
 			<version>1.5.3</version>
 		</dependency>
-	</dependencies>
 
+		<dependency>
+      		<groupId>junit</groupId>
+     			<artifactId>junit</artifactId>
+      		<version>4.11</version>
+      		<scope>test</scope>
+    		</dependency>
+	</dependencies>
 </project>
